Actualizada memoria conceptos teóricos

--- a/Documentación/bibliografia.bib
+++ b/Documentación/bibliografia.bib
@@ -94,3 +94,13 @@
   	title={AR evolution towards smart contact lens: A hit or a miss?},
   	author={Peethambar, Manu}
   }
+
+ @misc{ArQuake, title={ARQuake}, url={https://www.dutchrosemedia.com/augmented-reality-outdoor/arquake/}, journal={Dutch Rose Media}}
+ 
+ @misc{ wiki:RealidadAumentada,
+ 	author = "Wikipedia",
+ 	title = "Realidad aumentada --- Wikipedia{,} La enciclopedia libre",
+ 	year = "2020",
+ 	url = "https://es.wikipedia.org/w/index.php?title=Realidad_aumentada&oldid=126497279",
+ 	note = "[Internet; descargado 3-junio-2020]"
+ }
