--- a/Documentación/tex/2_Objetivos_del_proyecto.tex
+++ b/Documentación/tex/2_Objetivos_del_proyecto.tex
@@ -16,8 +16,7 @@ Para la creación del ejemplo se tiene como objetivo también el uso del MergeCu
 \item Uso de una herramienta de AR compatible con Unity.
 \item Utilizar Visual Studio para la programación de scripts del proyecto en Unity.
 \item Hacer uso de otra herramienta de desarrollo distinta a Unity, que requiera un usuario menos experimentado, como podría ser un alumno o profesor ajenos a la informática.
-\item Utilizar git como sistema de control de versiones, concretamente con GitHub.
-\item Para la organización de las issues  se hará uso de la extensión ZenHub.
+\item Poner en práctica lo aprendido en Organización de Proyectos: usando git como repositorio, concretamente con GitHub. Además para facilitar la organización de las issues  se hará uso de la extensión ZenHub.
 
 	
 \end{itemize}
