Añadida Tabla Comparativa

--- a/Documentación/tex/3_Conceptos_teoricos.tex
+++ b/Documentación/tex/3_Conceptos_teoricos.tex
@@ -232,6 +232,21 @@ Tiene soporte con los frameworks 3D A-Frame, three.js, babylon.js, Amazon Sumeri
 Requiere en iOS, iOS11 o superior, y el navegador Safari. En Android los navegadores soportados son; Chrome, Chromium,Firefox, Android WebViews.
 
 \subsection{Tabla comparativa}
+En la tabla \ref{tablaComparacion} se puede observar una comparativa entre las principales funcionalidades de las herramientas.
+
+\label{tablaComparacion}\tablaSmall{Comparativa herramientas AR}{l c c c c}{comparacionHerramientas}
+{ \multicolumn{1}{l}{Herramientas} & MultiTarget & AR sin Marcador & Plataformas Compatibles & Licencia \\}{ 
+	ArCore & X&X&Android& \\ 
+	ArKit &X&X&iOS\\
+	CoSpaces&X & & \\
+	Metaverse &X&X& \\
+	Zapworks  &X&&\\
+	Kudan   &X&X&\\
+	Vuforia  &X&X&\\
+	WikiTude &X&X& \\
+	OpenCV  &X& &\\
+	8thWall &X&X& \\
+}
 
 \section{Técnicas AR}
 
