Planificación temporal Sprint 18

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -95,6 +95,15 @@ Otro punto a investigar se trata de añadir alguna de las otras funciones de rea
  
  En la aplicación cuando en el menú se cambia entre menú normal y en realidad aumentada, el menú siempre vuelve a la página principal, se pone por objetivo, conseguir que cuando se cambie de tipo se conserve  la fase del menú. Es decir que si estoy en las opciones del menú, cuando cambie al modo de realidad aumentada siga en las opciones.
  Seguir mejorando los apartados de la documentación.
+ 
+  \subsection{Sprint 18 (03/06/2020 - 10/06/2020)}
+ Durante la reunión mostré los cambios de la interfaz del menú, y la mejora para que al cambiar entre menú normal y ar estén en la misma página. Al hacer esto me percate de un burg en el que en cierta pagina concreta no se cambia correctamente, con la consecuencia de que se superponen paginas. Este sera uno de los objetivos a resolver durante este sprint.
+ 
+ Otro de los avances que mostré los modelos de plantas que había añadido y como desde el menú se podía escoger cada una.  También explique que debido al modo en el que había realizado en primer momento el script que controla el cambio de fase de las plantas, no era posible añadir mas plantas de una forma eficiente. Por lo tanto mejorar este script, para que se pueda añadir tantos modelos sean necesarios de forma eficiente y funcional será otro de los objetivos del sprint.
+ 
+Otro de los objetivos será el de completar la tabla comparativa añadida en el anterior sprint y seguir mejorando apartados de la documentación.
+ 
+ 
 \section{Estudio de viabilidad}
 
 \subsection{Viabilidad económica}
