Actualizada Tabla comparativa

--- a/Documentación/tex/3_Conceptos_teoricos.tex
+++ b/Documentación/tex/3_Conceptos_teoricos.tex
@@ -232,21 +232,24 @@ Tiene soporte con los frameworks 3D A-Frame, three.js, babylon.js, Amazon Sumeri
 Requiere en iOS, iOS11 o superior, y el navegador Safari. En Android los navegadores soportados son; Chrome, Chromium,Firefox, Android WebViews.
 
 \subsection{Tabla comparativa}
-En la tabla \ref{tablaComparacion} se puede observar una comparativa entre las principales funcionalidades de las herramientas.
+En la tabla \ref{tabla:comparacionHerramientas} se puede observar una comparativa entre las principales funcionalidades de las herramientas.
 
-\label{tablaComparacion}\tablaSmall{Comparativa herramientas AR}{l c c c c}{comparacionHerramientas}
-{ \multicolumn{1}{l}{Herramientas} & MultiTarget & AR sin Marcador & Plataformas Compatibles & Licencia \\}{ 
-	ArCore & X&X&Android& \\ 
-	ArKit &X&X&iOS\\
-	CoSpaces&X & & \\
-	Metaverse &X&X& \\
-	Zapworks  &X&&\\
-	Kudan   &X&X&\\
-	Vuforia  &X&X&\\
-	WikiTude &X&X& \\
-	OpenCV  &X& &\\
-	8thWall &X&X& \\
+\label{tablaComparacion}\tablaSmall{Comparativa herramientas AR}{l c c c c c c}{comparacionHerramientas}
+{ \multicolumn{1}{l}{-} & MultiTarget & Sin Marcador & Plataforma  & Licencia & Precio & Requisitos\\}{ 
+	ArCore & X&X&Android& L & 0\euro & Altos\\ 
+	ArKit &X&X&iOS &L & 0\euro &-\\
+	CoSpaces&X & &iOS/Android  &L y C & 75\euro año&Medios\\
+	Metaverse &X&X&iOS/Android &L y C & ?\euro&Medios \\
+	Zapworks  &X&&iOS/Android &L y C & 55\euro mes& Medios\\
+	Kudan   &X&X&iOS/Android &L y C & ?\euro& Medios\\
+	Vuforia  &X&X& iOS/Android&L y C & 42\euro mes& Medios\\
+	WikiTude &X&X&iOS/Android &L y C & 2490\euro & Medios\\
+	OpenCV  &X& & iOS/Android&L & 0\euro& Bajos\\
+	8thWall &X&X& iOS/Android&L y C & 99mes\euro& Medios\\
 }
+
+
+
 
 \section{Técnicas AR}
 
