Planificación temporal Sprint 19

--- a/Documentación/tex/A_Plan_proyecto.tex
+++ b/Documentación/tex/A_Plan_proyecto.tex
@@ -91,18 +91,25 @@ Otro punto a investigar se trata de añadir alguna de las otras funciones de rea
  Para este sprint el objetivo mas principal es darle un pulido a la aplicación en la interfaz y demás para que se acerque mas al lo que debería ser el producto final. Otra mejora en la aplicación será implementar  la posibilidad de configurar desde el menú que tipo de realidad aumentada usar y poder ajustar otros posibles parámetros.  También seguir completando y mejorando la documentación, para este sprint me centraré en el punto de la historia de la realidad aumentada y comenzaré ha construir la tabla comparativa de las herramientas.
  
  \subsection{Sprint 17 (27/05/2020 - 03/06/2020)}
+ 
  En la semana de este sprint hemos decido poner por objetivos, seguir mejorando la aplicación, mejorando la interfaz y mas aspectos, acercándole a lo que sería el diseño final, pues aún hay botones y otros elementos que no tienen uso, o que en algún momento su único propósito era de realizar pruebas de funcionalidades o diseños. Otro de los objetivos tratará de añadir mínimo un segundo modelo de una planta, para que la aplicación pueda mostrar mas modelos. Respecto al crecimiento de las plantas también se mejorará las fases, pues ahora mismo cada fase tiene las mismas condiciones, será recomendable que cada fase estuviese ajustada a lo que podrían ser sus condiciones reales.
  
  En la aplicación cuando en el menú se cambia entre menú normal y en realidad aumentada, el menú siempre vuelve a la página principal, se pone por objetivo, conseguir que cuando se cambie de tipo se conserve  la fase del menú. Es decir que si estoy en las opciones del menú, cuando cambie al modo de realidad aumentada siga en las opciones.
  Seguir mejorando los apartados de la documentación.
  
-  \subsection{Sprint 18 (03/06/2020 - 10/06/2020)}
- Durante la reunión mostré los cambios de la interfaz del menú, y la mejora para que al cambiar entre menú normal y ar estén en la misma página. Al hacer esto me percate de un burg en el que en cierta pagina concreta no se cambia correctamente, con la consecuencia de que se superponen paginas. Este sera uno de los objetivos a resolver durante este sprint.
+ \subsection{Sprint 18 (03/06/2020 - 10/06/2020)}
+  
+ Durante la reunión mostré los cambios de la interfaz del menú, y la mejora para que al cambiar entre menú normal y AR estén en la misma página. Al hacer esto me percate de un bug en el que en cierta página concreta no se cambia correctamente, con la consecuencia de que se superponen páginas. Este sera uno de los objetivos a resolver durante este sprint.
  
  Otro de los avances que mostré los modelos de plantas que había añadido y como desde el menú se podía escoger cada una.  También explique que debido al modo en el que había realizado en primer momento el script que controla el cambio de fase de las plantas, no era posible añadir mas plantas de una forma eficiente. Por lo tanto mejorar este script, para que se pueda añadir tantos modelos sean necesarios de forma eficiente y funcional será otro de los objetivos del sprint.
  
 Otro de los objetivos será el de completar la tabla comparativa añadida en el anterior sprint y seguir mejorando apartados de la documentación.
  
+\subsection{Sprint 19 (10/06/2020 - 17/06/2020)}
+
+ Para este sprint me centraré en dejar la aplicación en una versión cercana a la definitiva, para ello me concentraré en corregir los pequeños bugs que aun puedan quedar. Durante la reunión mientras mostraba los progresos de la semana anterior, nos dimos cuenta de dos bugs. El primero y mas importante, se trata de que el progreso de los niveles, no se reinicia al cambiar a otra planta, es decir en el caso de que se haya completado todas las fases o nos quedemos a la mitad, si volvemos al menú y escogemos otra planta o otro modo distinto, el progreso será el mismo de antes, por lo que no se podrá avanzar adecuadamente. Otro de los bugs vistos se trata de al finalizar el tiempo máximo del que se dispone para realizar las tareas, salta un mensaje de texto para informar de que se ha acabado el tiempo, este mensaje no se ve adecuadamente debido al encuadre y al tamaño de la fuente. También será un objetivo, el revisar la aplicación en busca de posibles bugs importantes como los indicados anteriormente para añadirlos, y resolverlos durante este sprint.
+ 
+ El otro punto del sprint es centrase en los apartados de los anexos y la memoria que están menos avanzados.
  
 \section{Estudio de viabilidad}
 
